# moarclicks

./: .gitignore  Cargo.toml  README.md
src/: cli.yml  main.rs
