[package]
name = "moarclicks"
version = "0.1.0"
authors = ["Javad Asgari Shafique <javadshafique@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "2.33.3", features = ["yaml"]}
crossbeam-channel = "0.5.0"
enigo = "0.0.14"
inputbot = "0.5.0"
rand = "0.8.3"
